k8s/apps/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: turinghatch
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 8080
      name: http
  type: ClusterIP
